{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Land",
            "id": "fc1d5f53-621a-40b1-b8e3-9ad015f2c75d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1dc2c506-cd00-4427-b53e-fd5f35bb5fe0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b5486a5d-4322-4cf1-aa5c-2220827bdd50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Fireball",
                    "type": "Button",
                    "id": "f5c78917-f27d-4524-bfce-0705e4e73f11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73dfe226-e723-47ca-ba49-29ec22185d50",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "3255e81a-b12c-4b89-a6f0-91b9f5870cce",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1fc5dae8-f8e7-4520-bcff-0f5e5cbe5cfa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d1a1afa0-0c5a-4abb-9a99-2146ed547ae8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6613975e-5356-45ec-8c73-e6fb4025e0a6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "170660b5-071f-4edd-b76b-1d85ce24cc8b",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fireball",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}